@@ -1,5 +1,5 @@
 /*
- *   $Id: timer.c,v 1.7 2005/07/24 08:04:55 psavola Exp $
+ *   $Id: timer.c,v 1.8 2005/08/18 07:22:22 psavola Exp $
  *
  *   Authors:
  *    Pedro Roque		<roque@di.fc.ul.pt>
@@ -25,6 +25,7 @@ static struct timer_lst timers_head = {
 };
 
 static void alarm_handler(int sig);
+int inline check_time_diff(struct timer_lst *tm, struct timeval tv);
 
 static void
 schedule_timer(void)
@@ -86,6 +87,7 @@ set_timer(struct timer_lst *tm, double secs)
 
 	lst = &timers_head;
 
+	/* the timers are in the list in the order they expire, the soonest first */
 	do {
 		lst = lst->next;
 	} while ((tm->expires.tv_sec > lst->expires.tv_sec) ||
@@ -128,13 +130,24 @@ alarm_handler(int sig)
 {
 	struct timer_lst *tm, *back;
 	struct timeval tv;
-
 	gettimeofday(&tv, NULL);
 	tm = timers_head.next;
 
-	while ((tm->expires.tv_sec < tv.tv_sec)
-			|| ((tm->expires.tv_sec == tv.tv_sec) 
-			    && (tm->expires.tv_usec <= tv.tv_usec)))
+	/*
+	 * This handler is called when the alarm goes off, so at least one of
+	 * the interfaces' timers should satisfy the while condition.
+	 *
+	 * Sadly, this is not always the case, at least on Linux kernels:
+	 * see http://lkml.org/lkml/2005/4/29/163. :-(.  It seems some
+	 * versions of timers are not accurate and get called up to a couple of
+	 * hundred microseconds before they expire.
+	 *
+	 * Therefore we allow some inaccuracy here; it's sufficient for us
+	 * that a timer should go off in a millisecond.
+	 */
+
+	/* unused timers are initialized to LONG_MAX so we skip them */
+	while (tm->expires.tv_sec != LONG_MAX && check_time_diff(tm, tv))
 	{		
 		tm->prev->next = tm->next;
 		tm->next->prev = tm->prev;
@@ -157,4 +170,35 @@ init_timer(struct timer_lst *tm, void (*handler)(void *), void *data)
 	memset(tm, 0, sizeof(struct timer_lst));
 	tm->handler = handler;
 	tm->data = data;
+}
+
+int inline
+check_time_diff(struct timer_lst *tm, struct timeval tv)
+{
+	struct itimerval diff;
+	memset(&diff, 0, sizeof(diff));
+
+	#define ALLOW_CLOCK_USEC 1000
+
+	timersub(&tm->expires, &tv, &diff.it_value);
+	dlog(LOG_DEBUG, 5, "check_time_diff, difference: %ld sec + %ld usec",
+		diff.it_value.tv_sec, diff.it_value.tv_usec);
+
+	if (diff.it_value.tv_sec <= 0) {
+		/* already gone, this is the "good" case */
+		if (diff.it_value.tv_sec < 0)
+			return 1;
+#ifdef __linux__ /* we haven't seen this on other OSes */
+		/* still OK if the expiry time is not too much in the future */
+		else if (diff.it_value.tv_usec > 0 &&
+		            diff.it_value.tv_usec <= ALLOW_CLOCK_USEC) {
+			dlog(LOG_DEBUG, 4, "alarm_handler clock was probably off by %ld usec, allowing %u",
+			     tm->expires.tv_usec-tv.tv_usec, ALLOW_CLOCK_USEC);
+			return 2;
+		}
+#endif /* __linux__ */
+		else /* scheduled intentionally in the future? */
+			return 0;
+	}
+	return 0;
 }
